# powersig

./: .gitignore  README.md  chebychev_plots.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: README  __init__.py  base.py  benchmark.py  benchmark_runner.py  benchmark_sum_squared.py  benchmarks.py  configuration.py  dotproducts.py  generators.py  kernel_benchmarks.py  plots.py  regressions.py  util.py
benchmarks/Before20250218/: ksig.csv  powersig.csv  sigkernel.csv
benchmarks/results/: ksig.csv  ksig_pde.csv  ksig_pde_results.csv  ksig_results.csv  powersig.csv  powersig_results.csv  sigkernel.csv  sigkernel_results.csv
examples/: bitcoin.py  chebychev.py  classification.py  eigenworms.py  electricity_analysis.py  large_window.py  long_time_dependency.py  neural.py  regression.py  regression_simple.py  simple.py  wide_regression.py
powersig/: __init__.py  cuda.py  fbm_utils.py  jax.py  jax_config.py  matrixsig.py  power_series.py  powersig_cuda.py  powersig_cupy.py  powersig_old.py  psig.py  simpesig.py  torch.py
powersig/cupy_backend/: __init__.py  algorithm.py  cupy_series.py
powersig/jax/: algorithm.py  autodiff.py  jax_config.py  jax_series.py  static_kernels.py  utils.py
powersig/torch/: __init__.py  algorithm.py  series.py  utils.py
powersig/util/: __init__.py  cuda.py  fbm_utils.py  grid.py  jax_series.py  series.py  (+1 more)
prototyping/: matrixsig.py  power_series.py  powersig_old.py  simpesig.py
tests/: accuracy.py  accuracy_test.py  benchmarks_test.py  configuration.py  powersig_cuda_test.py  runner.py  test_autodiff.py  test_core_jax.py  test_powersig.py  test_powersig_cuda.py  test_powersig_cupy.py  test_powersig_jax.py  utils.py
(+22 files in other folders)
